deployments/kubernetes/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: portfolio
spec:
  redirectScheme:
    scheme: https
    permanent: true
