deployments/kubernetes/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  namespace: portfolio
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`portfolio.glanze.site`)
      kind: Rule
      services:
        - name: portfolio
          port: 80
  tls:
    secretName: portfolio-tls
    certResolver: le
