deployments/kubernetes/base/portfolio-http-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-http
  namespace: portfolio
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`portfolio.glanze.site`)
      kind: Rule
      services:
        - name: portfolio
          port: 80
